--- a/app/src/main/res/layout/fragment_payment_description.xml
+++ b/app/src/main/res/layout/fragment_payment_description.xml
@@ -132,7 +132,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     app:header="@string/house_on"
-                    app:required="true" />
+                    app:required="false" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
                     android:id="@+id/place_or_building_payment"
@@ -167,7 +167,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
                     app:header="@string/street"
-                    app:required="true" />
+                    app:required="false" />
 
             </LinearLayout>
 
@@ -184,7 +184,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     app:header="@string/province"
-                    app:required="true" />
+                    app:required="false" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
                     android:id="@+id/district_payment"
@@ -193,7 +193,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
                     app:header="@string/district"
-                    app:required="true" />
+                    app:required="false" />
 
             </LinearLayout>
 
@@ -210,7 +210,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     app:header="@string/sub_district"
-                    app:required="true" />
+                    app:required="false" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyEditTextBorder
                     android:id="@+id/post_code_payment"
@@ -219,7 +219,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
                     app:header="@string/post_code"
-                    app:required="true" />
+                    app:required="false" />
 
             </LinearLayout>
 
