--- a/app/src/main/res/layout/item_list_order_product.xml
+++ b/app/src/main/res/layout/item_list_order_product.xml
@@ -17,35 +17,47 @@
         android:paddingStart="16dp">
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:id="@+id/product_image_list_order"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:background="@drawable/border_grey"
             android:contentDescription="@string/app_name" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/product_name_list_order"
+            style="@style/descriptionProduct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
+            android:textSize="16sp"
             tools:text="@string/app_name" />
 
     </LinearLayout>
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/product_price_list_order"
+        style="@style/descriptionProduct"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.5"
+        android:textSize="16sp"
         tools:text="4,200" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/product_qty_list_order"
+        style="@style/descriptionProduct"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.5"
+        android:textSize="16sp"
         tools:text="1" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/product_total_price_list_order"
+        style="@style/descriptionProduct"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.5"
+        android:textSize="16sp"
         tools:text="4,200" />
 </LinearLayout>
