--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -13,8 +13,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -124,7 +123,7 @@
                 android:id="@+id/layout_total_shopping_cart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="16dp"
                 android:background="@color/lightgray"
                 android:gravity="end"
                 android:orientation="horizontal"
