--- a/app/src/main/res/layout/fragment_payment_check_out.xml
+++ b/app/src/main/res/layout/fragment_payment_check_out.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -33,8 +32,8 @@
             style="@style/textSubCheck"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginBottom="16dp"
+            android:gravity="center"
             android:text="@string/tell" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyEditText
@@ -44,10 +43,10 @@
             android:layout_marginBottom="16dp"
             android:background="@drawable/border_grey"
             android:inputType="number"
+            android:maxLength="10"
             android:maxLines="1"
             android:padding="8dp"
             android:textSize="18sp"
-            android:maxLength="10"
             android:windowSoftInputMode="adjustResize" />
 
         <android.support.v7.widget.CardView
@@ -57,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/hintColor" >
+            app:cardBackgroundColor="@color/hintColor">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 style="@style/RaisedButton"
@@ -65,30 +64,19 @@
                 android:layout_height="wrap_content"
                 android:text="@string/ok"
                 android:textColor="@android:color/white"
-                android:textSize="14sp"
                 app:typeFaceAsset="RobotoLight.ttf" />
 
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/skip_btn_check_out"
-            style="@style/RaisedButtonCard"
-            android:layout_width="match_parent"
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/skipButton"
+            style="@style/RaisedButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/categoryColor" >
+            android:text="@string/skip"
+            android:textColor="@drawable/text_selector_orange"
+            app:typeFaceAsset="RobotoLight.ttf" />
 
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                style="@style/RaisedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/skip"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                app:typeFaceAsset="RobotoLight.ttf" />
-
-        </android.support.v7.widget.CardView>
     </LinearLayout>
 
 </LinearLayout>
