--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#F4F4F4</color>
 
     <color name="powerBuyPurple">#542D87</color>
+    <color name="powerBuyOrange">#F4893F</color>
     <color name="powerBuyWhite">#FFFFFF</color>
 
     <color name="contentTextColor">#282828</color>
