--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -43,6 +43,7 @@
                         android:textSize="32sp" />
 
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                        android:id="@+id/order_number_order_success"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/order_number"
