--- a/app/src/main/res/layout/fragment_history_payment.xml
+++ b/app/src/main/res/layout/fragment_history_payment.xml
@@ -27,7 +27,7 @@
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
         android:paddingTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_result"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_header_history" />
@@ -40,10 +40,11 @@
         android:padding="10dp"
         android:text="@string/not_have_data"
         android:textSize="40sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recycler_view_history"
+        app:layout_constraintTop_toTopOf="parent"
         app:typeFaceAsset="RobotoLight.ttf" />
 
 </android.support.constraint.ConstraintLayout>
