--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -2,23 +2,26 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:id="@+id/card_view"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/powerBuyWhite"
     app:cardCornerRadius="10dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/order_number_history"
             style="@style/textSubCheck"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:paddingTop="16dp"
             android:textSize="22sp"
             app:layout_constraintBottom_toTopOf="@+id/date_history"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +33,7 @@
             android:id="@+id/date_history"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:paddingTop="16dp"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/order_name_history"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +46,8 @@
             style="@style/textSubCheck"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
