--- a/app/src/main/res/layout/list_item_members.xml
+++ b/app/src/main/res/layout/list_item_members.xml
@@ -38,7 +38,7 @@
         android:id="@+id/member_line"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/hintColor"
+        android:background="@color/lightgray"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
