--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -261,7 +261,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/graySelect" />
+                android:background="@color/lightgray" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 style="@style/textPaymentHeader"
@@ -372,7 +372,7 @@
                 android:layout_height="1dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/graySelect" />
+                android:background="@color/lightgray" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/finish_btn_order_success"
