--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -11,14 +11,13 @@
         android:id="@+id/layout_filter"
         android:layout_width="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/layout_category"
+        app:layout_constraintBottom_toTopOf="@+id/line"
         android:layout_height="48dp">
 
         <LinearLayout
             android:id="@+id/layout_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="?android:attr/selectableItemBackground"
@@ -28,16 +27,15 @@
                 android:id="@+id/img_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:src="@drawable/ic_arrow_back"/>
+                android:layout_marginStart="16dp"
+                android:src="@drawable/ic_arrow_back"
+                android:contentDescription="@string/app_name" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_title_product"
                 style="@style/textNameCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"
                 android:ellipsize="end"
                 android:textStyle="bold"
@@ -79,7 +77,6 @@
             android:id="@+id/layout_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="?android:attr/selectableItemBackground"
@@ -90,29 +87,37 @@
                 style="@style/textSize18Sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
                 android:layout_marginEnd="15dp"
                 android:ellipsize="end"
-                android:text="Product"
+                android:text="@string/product"
                 android:textStyle="bold"/>
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_keyboard_arrow_down"/>
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_keyboard_arrow_down"
+                android:contentDescription="@string/app_name" />
 
         </LinearLayout>
 
     </RelativeLayout>
 
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/layout_filter"
+        app:layout_constraintBottom_toTopOf="@+id/layout_category"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/lightgray"/>
+
     <RelativeLayout
         android:id="@+id/layout_category"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_filter"
+        app:layout_constraintTop_toBottomOf="@+id/line"
         app:layout_constraintBottom_toTopOf="@+id/recycler_view_list"
         android:layout_height="48dp">
 
@@ -122,41 +127,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="16dp"
             android:ellipsize="end"
             android:textStyle="bold"
-            tool:text="Category"/>
+            tool:text="Category"
+            tool:ignore="RelativeOverlap" />
 
         <LinearLayout
             android:id="@+id/layout_sort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tool:ignore="RelativeOverlap">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_sort"
                 style="@style/textSize18Sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
                 android:layout_marginEnd="15dp"
                 android:ellipsize="end"
-                android:text="Sort"
+                android:text="@string/sort"
                 android:textStyle="bold"/>
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_sort"/>
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_sort"
+                android:contentDescription="@string/app_name" />
 
         </LinearLayout>
 
