--- a/app/src/main/res/layout/list_item_product_filter_item.xml
+++ b/app/src/main/res/layout/list_item_product_filter_item.xml
@@ -6,7 +6,6 @@
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:clickable="true"
     android:orientation="horizontal">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -15,7 +14,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         style="@style/textSub"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         app:typeFaceAsset="RobotoLight.ttf"
         tools:text="Sub Filter"/>
 
