--- a/app/src/main/res/layout/list_item_product_detail_image_main.xml
+++ b/app/src/main/res/layout/list_item_product_detail_image_main.xml
@@ -49,7 +49,7 @@
 
         <ImageView
             android:id="@+id/image_view"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="300dp"
             android:layout_gravity="center_horizontal"
             android:scaleType="fitCenter"
