--- a/app/src/main/res/layout/list_item_product_detail_image_pager_item.xml
+++ b/app/src/main/res/layout/list_item_product_detail_image_pager_item.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/image_view"
-    android:layout_width="100dp"
+    android:layout_width="wrap_content"
     android:layout_height="100dp"
     android:layout_gravity="center"
     android:scaleType="fitCenter"
