Create cache brand from get brand in CompareProduct

--- a/app/src/main/res/layout/list_item_compare_product.xml
+++ b/app/src/main/res/layout/list_item_compare_product.xml
@@ -67,7 +67,7 @@
             android:orientation="vertical">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_product_name"
+                android:id="@+id/txt_product_brand"
                 style="@style/textNameProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
