--- a/app/src/main/res/layout/app_bar_compare.xml
+++ b/app/src/main/res/layout/app_bar_compare.xml
@@ -36,17 +36,16 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="end"
-            android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/ic_search_bar"
             android:contentDescription="@string/app_name" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyShoppingCartView
+            android:id="@+id/shopping_cart_compare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="end"
-            android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"/>
 
     </android.support.v7.widget.Toolbar>
