--- a/app/src/main/res/layout/list_item_avaliable_topic.xml
+++ b/app/src/main/res/layout/list_item_avaliable_topic.xml
@@ -1,51 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/headDetail">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="5"
         android:orientation="horizontal">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/text_store"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:layout_gravity="center"
-            android:textSize="16sp"
+            android:text="@string/store"
             android:textColor="@color/nameProductColor"
-            android:text="@string/store"/>
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/text_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:gravity="center|center_vertical"
+            android:text="@string/store_name"
+            android:textColor="@color/nameProductColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/text_address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="3"
             android:gravity="center|center_vertical"
-            android:layout_gravity="center"
-            android:textSize="16sp"
+            android:text="@string/address"
             android:textColor="@color/nameProductColor"
-            android:text="@string/address"/>
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/telephone_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:gravity="center|center_vertical"
+            android:text="@string/telephone"
+            android:textColor="@color/nameProductColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/text_stock"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:layout_gravity="center"
-            android:textSize="16sp"
+            android:text="@string/stock"
             android:textColor="@color/nameProductColor"
-            android:text="@string/stock"/>
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </RelativeLayout>
