--- a/app/src/main/res/layout/list_item_avaliable_detail.xml
+++ b/app/src/main/res/layout/list_item_avaliable_detail.xml
@@ -23,7 +23,7 @@
             android:textSize="16sp"
             android:inputType="textMultiLine"
             android:textColor="@color/nameProductColor"
-            tools:text="@string/store"/>
+            tools:text="@string/store_code"/>
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/text_name"
@@ -36,18 +36,6 @@
             android:inputType="textMultiLine"
             android:textColor="@color/nameProductColor"
             tools:text="Name"/>
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/text_address"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="start|center_vertical"
-            android:layout_gravity="center"
-            android:textSize="16sp"
-            android:inputType="textMultiLine"
-            android:textColor="@color/nameProductColor"
-            tools:text="@string/address"/>
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/text_telephone"
@@ -66,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center|center_vertical"
+            android:gravity="center"
             android:layout_gravity="center"
             android:textSize="16sp"
             android:inputType="textMultiLine"
