--- a/app/src/main/res/layout/list_item_avaliable_topic.xml
+++ b/app/src/main/res/layout/list_item_avaliable_topic.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center|center_vertical"
-            android:text="@string/store"
+            android:text="@string/store_code"
             android:textColor="@color/nameProductColor"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -31,18 +31,6 @@
             android:layout_weight="2"
             android:gravity="center|center_vertical"
             android:text="@string/store_name"
-            android:textColor="@color/nameProductColor"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/text_address"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="3"
-            android:gravity="center|center_vertical"
-            android:text="@string/address"
             android:textColor="@color/nameProductColor"
             android:textSize="16sp"
             android:textStyle="bold" />
