--- a/app/src/main/res/layout/drawer_user_new.xml
+++ b/app/src/main/res/layout/drawer_user_new.xml
@@ -54,12 +54,12 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/img_arrow_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_arrow_next"
-        android:contentDescription="@string/app_name" />
+    <!--<ImageView-->
+        <!--android:id="@+id/img_arrow_next"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:src="@drawable/ic_arrow_next"-->
+        <!--android:contentDescription="@string/app_name" />-->
 
 </LinearLayout>
