--- a/app/src/main/res/layout/list_item_product_detail_description.xml
+++ b/app/src/main/res/layout/list_item_product_detail_description.xml
@@ -287,7 +287,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="center_vertical"
-                        android:contentDescription="@string/product_available"
+                        android:contentDescription="@string/store_avaliable"
                         android:src="@drawable/ic_store_white" />
 
                     <cenergy.central.com.pwb_store.view.PowerBuyTextView
