--- a/app/src/main/res/layout/list_item_product_detail_image_main.xml
+++ b/app/src/main/res/layout/list_item_product_detail_image_main.xml
@@ -12,9 +12,7 @@
     <LinearLayout
         android:id="@+id/layout_image_view"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -51,6 +49,7 @@
             android:id="@+id/image_view"
             android:layout_width="wrap_content"
             android:layout_height="300dp"
+            android:minWidth="300dp"
             android:layout_gravity="center_horizontal"
             android:scaleType="fitCenter"
             tools:src="@mipmap/ic_launcher"
