--- a/app/src/main/res/layout/fragment_payment_description.xml
+++ b/app/src/main/res/layout/fragment_payment_description.xml
@@ -282,7 +282,7 @@
         </LinearLayout>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/payment_button_payment"
+            android:id="@+id/delivery_button_payment"
             style="@style/RaisedButtonCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -294,7 +294,7 @@
                 style="@style/RaisedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/payment_header"
+                android:text="@string/choose_delivery_option"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:typeFaceAsset="RobotoLight.ttf" />
