--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -177,7 +177,7 @@
                 android:orientation="horizontal"
                 android:weightSum="2">
 
-                <android.support.v7.widget.AppCompatAutoCompleteTextView
+                <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
                     android:id="@+id/inputProvince"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -185,6 +185,8 @@
                     android:layout_weight="1"
                     android:completionThreshold="1"
                     android:hint="@string/province"
+                    app:act_header="@string/province"
+                    app:act_required="true"
                     android:inputType="textNoSuggestions" />
 
                 <android.support.v7.widget.AppCompatAutoCompleteTextView
@@ -307,7 +309,5 @@
                 app:typeFaceAsset="RobotoLight.ttf" />
 
         </android.support.v7.widget.CardView>
-
     </LinearLayout>
-
 </android.support.v4.widget.NestedScrollView>
