--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,4 +17,8 @@
         <attr name="header" format="string"/>
         <attr name="required" format="boolean"/>
     </declare-styleable>
+    <declare-styleable name="PowerBuyAutoCompleteTextStroke">
+        <attr name="act_header" format="string"/>
+        <attr name="act_required" format="boolean"/>
+    </declare-styleable>
 </resources>
