--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     android:background="@color/powerBuyWhite">
 
     <LinearLayout
@@ -91,9 +92,7 @@
                     android:layout_weight="1"
                     app:header="@string/email"
                     app:required="true" />
-
             </LinearLayout>
-
         </LinearLayout>
 
         <View
@@ -184,21 +183,17 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:completionThreshold="1"
-                    android:hint="@string/province"
                     app:act_header="@string/province"
-                    app:act_required="true"
-                    android:inputType="textNoSuggestions" />
+                    app:act_required="true" />
 
-                <android.support.v7.widget.AppCompatAutoCompleteTextView
+                <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
                     android:id="@+id/inputDistrict"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
-                    android:completionThreshold="1"
-                    android:hint="@string/district"
-                    android:inputType="textNoSuggestions"
-                    app:layout_constraintTop_toBottomOf="@+id/inputProvince" />
+                    app:act_header="@string/district"
+                    app:act_required="true"/>
 
             </LinearLayout>
 
@@ -208,27 +203,24 @@
                 android:orientation="horizontal"
                 android:weightSum="2">
 
-                <android.support.v7.widget.AppCompatAutoCompleteTextView
+                <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
                     android:id="@+id/inputSubDistrict"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:completionThreshold="1"
-                    android:hint="@string/sub_district"
-                    android:inputType="textNoSuggestions"
-                    app:layout_constraintTop_toBottomOf="@+id/inputDistrict" />
+                    app:act_header="@string/sub_district"
+                    app:act_required="true" />
 
-                <android.support.v7.widget.AppCompatAutoCompleteTextView
+                <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
                     android:id="@+id/inputPostcode"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
-                    android:completionThreshold="1"
-                    android:hint="@string/post_code"
-                    android:inputType="textNoSuggestions"
-                    app:layout_constraintTop_toBottomOf="@+id/inputSubDistrict" />
+                    app:act_header="@string/post_code"
+                    app:act_required="true"/>
 
             </LinearLayout>
 
@@ -248,7 +240,6 @@
                     app:required="false" />
 
             </LinearLayout>
-
         </LinearLayout>
 
         <View
@@ -307,7 +298,6 @@
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:typeFaceAsset="RobotoLight.ttf" />
-
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
