--- a/app/src/main/res/layout/view_edit_text_boder.xml
+++ b/app/src/main/res/layout/view_edit_text_boder.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:focusableInTouchMode="true"
     android:orientation="vertical">
 
     <LinearLayout
@@ -32,18 +33,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/border_grey">
+        android:background="@drawable/border_grey"
+        android:theme="@style/Form.EditTextLayoutTheme">
 
-        <cenergy.central.com.pwb_store.view.PowerBuyEditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:background="@android:color/transparent"
             android:inputType="text"
             android:maxLines="1"
-            android:layout_marginBottom="12dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:textCursorDrawable="@drawable/cursor_orange"
             android:textSize="18sp"
             android:windowSoftInputMode="adjustResize" />
     </android.support.design.widget.TextInputLayout>
