--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -164,4 +164,12 @@
         <item name="android:spinnersShown">false</item>
     </style>
 
+    <!-- Form -->
+    <style name="Form" />
+    <style name="Form.EditTextLayoutTheme" parent="AppTheme">
+        <item name="colorAccent">@color/powerBuyOrange</item>
+        <item name="colorControlNormal">@color/powerBuyOrange</item>
+        <item name="colorControlActivated">@color/powerBuyOrange</item>
+
+    </style>
 </resources>
