--- a/app/src/main/res/layout/fragment_delivery_stores.xml
+++ b/app/src/main/res/layout/fragment_delivery_stores.xml
@@ -9,9 +9,9 @@
         style="@style/textCompare"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:ellipsize="end"
         android:text="@string/delivery"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,10 +24,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_header_store"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_header_store" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
